# services/auth-service/src/auth/dto/update-me.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, MinLength } from 'class-validator';
+
+export class UpdateMeDto {
+  @ApiProperty({ example: 'Sreerag P', minLength: 2 })
+  @IsString()
+  @MinLength(2)
+  name: string;
+}
